Polar: - added status property to PolarFlowClient
View:
- added files widgets.py and widgets.kv
- implemented dropdown menu with filter function

--- a/.kivy/config.ini
+++ b/.kivy/config.ini
@@ -44,7 +44,7 @@ custom_titlebar = 0
 custom_titlebar_border = 5
 
 [input]
-mouse = mouse
+mouse = mouse,disable_multitouch
 wm_touch = wm_touch
 wm_pen = wm_pen
 
